<resources>
    <string name="app_name">PhilWood ID</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">PhilWood ID</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="action_clear">Clear</string>
    <string name="title_activity_inference_details">InferenceDetailsActivity</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_close">Close</string>
    <string name="action_recalibrate">Recalibrate Camera</string>
    <string name="camera_calibration">Camera Calibration</string>
    <string name="calibration_instructions">Please attach the XyloPhone to your mobile device, remove the cover, place on top of the sanded portion of a wood sample and tap on \"Start Calibration\" to begin</string>
    <string name="calibration_instructions_1">1. Turn on the light of the Xylophone</string>
    <string name="calibration_instructions_2">2. Adjust zoom to fill 6.35mmx 6.35mm of the sample area</string>
    <string name="calibration_instructions_3">3. Use a white balance card and click on AWB button to adjust the white balance</string>
    <string name="calibration_instructions_4">4. Exit and perform a test capture on a wood sample</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="white_balance">White Balance</string>
    <string name="other_settings">Other Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="zoom">Zoom Level</string>
    <string name="ae_compensation">Auto Exposure Compensation</string>
    <string name="enable_location_tagging">Enable Location Tagging</string>
    <string name="identification_in_progress">Identification in progress..</string>
    <string name="show_details_popup">Show ID details popup</string>
    <string name="crop_factor">Crop Factor</string>
    <string name="action_about">About</string>
    <string name="about">About</string>
    <string name="confirm_delete">Are you sure you want to delete item?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="continue_button">Continue</string>
    <string name="skip">Skip</string>
    <string name="report_mislabeled">Report Mislabeled</string>
    <string name="export_json">Export JSON</string>
    <string name="confirm_delete_all">This will delete all records, are you sure?</string>
    <string name="confirm_json_export">Extract Log to CSV? </string>
    <string name="export_successful">Export is successful. File placed in %1$s</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="capture_sample">Identify Wood</string>
    <string name="splash_title">PhilWoodID</string>
    <string name="enable_custom_awb">Enable Custom White Balance</string>
    <string name="custom_white_balance_gains">Custom white balance gain values (R,G,B)</string>
    <string name="force_digital_zoom">Force digital zoom</string>
    <string name="user_information">User Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pin_code">4 digit PIN code</string>
    <string name="save">Save</string>
    <string name="pin_code_confirm">Confirm PIN code</string>
    <string name="enter_pin_code">Enter 4 digit PIN</string>
    <string name="export_csv">Export</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="applying_filter">Applying date filter</string>
    <string name="manage_model">Updates..</string>
    <string name="set_active">Activate</string>
    <string name="install_model">Install a model</string>
    <string name="installing_model">Installing Model...</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="exporting">Exporting...</string>
    <string name="sensor_sensitivity">Sensor Sensitivity in ISO units</string>
    <string name="exposure_time">Sensor Exposure time in nanoseconds</string>
    <string name="frame_duration_time">Frame Duration Time in nanoseconds</string>
    <string name="custom_exposure_settings">Custom Camera Exposure Settings</string>
    <string name="reset_camera_settings">Reset Settings</string>
    <string name="confirm_reset_camera">Are you sure you want to reset camera settings to defaults?</string>
    <string name="enable_pin_code">Enable Pin Security</string>
    <string name="pick_image_gallery">Select Image</string>
    <string name="delete_model">Delete this model</string>
    <string name="active">Active</string>
    <string name="update_profile">Profile</string>
    <string name="model_settings">Model Settings</string>
    <string name="model_accuracy_threshold">Model Accuracy Threshold</string>
    <string name="unknown">Unidentified</string>
    <string name="reference_images_label">Reference Images</string>
    <string name="uncertainty_margin">Show top 2 if scores are within % margin</string>
    <string name="tap_to_focus">Tap to focus</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_monkey">MonkeyActivity</string>
</resources>