<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/camera_calibration">
        <EditTextPreference
            app:key="white_balance"
            app:title="@string/white_balance"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="zoom"
            app:title="@string/zoom"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="ae_compensation"
            app:title="@string/ae_compensation"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="crop_factor"
            app:title="@string/crop_factor"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="enable_custom_awb"
            app:title="@string/enable_custom_awb"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="force_digital_zoom"
            app:title="@string/force_digital_zoom"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="custom_awb_gains"
            app:title="@string/custom_white_balance_gains"
            app:useSimpleSummaryProvider="true"
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/custom_exposure_settings">
        <SwitchPreference
            app:key="use_custom_exposure"
            app:title="Enable Custom Exposure"
            app:useSimpleSummaryProvider="true"
            />
        <EditTextPreference
            app:key="sensor_sensitivity"
            app:title="@string/sensor_sensitivity"
            app:useSimpleSummaryProvider="true"
            />
        <EditTextPreference
            app:key="exposure_time"
            app:title="@string/exposure_time"
            app:useSimpleSummaryProvider="true"
            />
        <EditTextPreference
            app:key="frame_duration_time"
            app:title="@string/frame_duration_time"
            app:useSimpleSummaryProvider="true"
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/other_settings">
        <SwitchPreference
            app:key="location_tagging"
            app:title="@string/enable_location_tagging"
            app:useSimpleSummaryProvider="true"/>
        <SwitchPreference
            app:key="enable_pin_code"
            app:title="@string/enable_pin_code"
            app:useSimpleSummaryProvider="true"/>
        <SwitchPreference
            app:key="show_details_after_capture"
            app:title="@string/show_details_popup"
            app:useSimpleSummaryProvider="false"/>
        <SwitchPreference
            app:key="developer_mode"
            app:title="@string/developer_mode"
            app:useSimpleSummaryProvider="false"/>
    </PreferenceCategory>
</PreferenceScreen>