<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.fao.mobile.woodidentifier.MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/action_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recalibrate"
        android:orderInCategory="100"
        android:title="@string/action_recalibrate"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_csv"
        android:orderInCategory="100"
        android:title="@string/export_csv"
        app:showAsAction="never"
        />
</menu>