<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:orientation="horizontal">
    <TextView
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:id='@+id/name'
        android:layout_toRightOf="@id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/version"
        android:layout_below="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"></TextView>
    <TextView
        android:id="@+id/description"
        android:layout_below="@id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/activateButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_active"></Button>
    <TextView
        android:id="@+id/activeText"
        android:visibility="gone"
        android:text="@string/active"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <ImageButton
        android:visibility="gone"
        android:id="@+id/deleteModelButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_model"
        android:src="@drawable/ic_delete_white_24dp">
    </ImageButton>
</RelativeLayout>