<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/header_group"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/map_marker"
                ></ImageView>
            <TextView
                android:id="@+id/location_marker"
                android:text="@string/not_set"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/location_marker_field"
                android:visibility="gone"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
            <Button
                android:id="@+id/set_location_button"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                ></Button>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/edit_buttons_group"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/set_location_apply_button"
                    android:background="@android:color/transparent"
                    android:textColor="@color/un_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    ></Button>
                <Button

                    android:id="@+id/set_location_cancel_button"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    ></Button>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <include layout="@layout/date_filter" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_group">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inference_log_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_secondary_variant"></androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_layers_search_black_48dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fab_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="20dp"
        android:layout_toLeftOf="@id/fab"
        android:background="@color/teal_200"
        android:text="@string/capture_sample"
        android:textColor="@color/white"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_camera_black_48dp" />
</RelativeLayout>